--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -84,7 +84,7 @@
     "### Preprocessing\n",
     "Each sample is a mono audio file (one channel) that is 30 seconds long with a sampling rate of 22.5 kHz. This implies that each sample is a tensor with shape (675000,1). This sequence length was too long to efficiently train the neural network (that will be described in the next section). For this reason each audio file was downsampled by a factor 3. In order to prevent aliasing, before downsampling, the signal was passed through a low pass filter, that was implemented from scratch in order to be fully integrated in the data pipeline. The low pass filter is implemented by the method `data.dataset.low_pass(signal,fc,npoints=128)` that takes as input a signal with shape (seq_len,n_channels) and the cutoff frequency fc and it returns the same signal without all the frequency components that are above the cutoff. In order to further reduce the number of samples each downsampled audiofile was split into 6 samples.\n",
     "The data pipeline is implemented by the method `data.dataset.get_unlabelled_dataset(bs=None,nsplits=1,downsample=1)`, while the values of the parameters used for training are stored in the file `params.py`.\n",
-    "In order to train the model efficiently the dataset was cached. "
+    "In order to train the model efficiently the dataset was cached in the directory `dataset` where the folder `unlabelled` contains the while batched dataset (about 6000 tracks) while `unlabelled_10` the batched dataset with only 10 samples (40 tracks since the batch size is 4)."
    ]
   },
   {
