--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,7 +8,7 @@
     "In this notebook we will implement a Diffusion Probabilistic Model to generate music from raw waveform.\\\n",
     "A Diffusion Model learns to invert a Markov process that progressively adds gaussian noise to the signal until the signal is completely destroyed. As shown in the figure.\n",
     "\n",
-    "<center><img src=\"./images/diff_model.png\"></img></center>\n",
+    "<center><img src=\"images/diff_model.png\"></img></center>\n",
     "\n",
     "The forward process $q(x_t | x_{t-1})$ is fixed, and it can be parametrized as:\n",
     "\n",
