--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -7,8 +7,8 @@
     "# Generate Music With Diffusion Models\n",
     "In this notebook we will implement a Diffusion Probabilistic Model to generate music from raw waveform.\n",
     "A Diffusion Model learns to invert a Markov process that progressively adds gaussian noise to the signal until the signal is completely destroyed. As shown in the figure.\n",
-    "\n",
-    "<center><img src=\"https://github.com/giorgiodema/Generate_Music_with_Diffusion_Models/blob/master/images/diff_model.png\"/></center>\n",
+    "!(img)[images/diff_model.png]\n",
+    "<center><img src=\"images/diff_model.png\"/></center>\n",
     "\n",
     "The forward process $q(x_t | x_{t-1})$ is fixed, and it can be parametrized as:\n",
     "\n",
