--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -399,6 +399,9 @@
    "metadata": {},
    "source": [
     "After that the model was trained on 40 tracks. The train loop is implemented in `diffusion.diffusion_process.train`. The method saves the weights of the network each 1000 steps. The weights at any available checkpoint can be loaded before generating an audio track. The available checkpoints are stored in the directory `ckpt_10`.\n",
+    "The plot shows the loss function.\n",
+    "<center><img src=\"./images/train_loss.png\" width=1500px></img></center>\n",
+    "\n",
     "This is an example of generated sample:"
    ]
   },
